Additional info added to headline for the EXTBIWebsite

--- a/EXTBIwebsite/SOLAPTool/headline.html
+++ b/EXTBIwebsite/SOLAPTool/headline.html
@@ -1,3 +1,5 @@
 <section id="shout">
-  <h1>SOLAP Query Builder</h1>
+  <h1>GeoSemOLAP: A SOLAP Query Builder</h1>
+  <p> Corresponding resources can be found on the <a href="/GeoSemOLAP/index.php">GeoSemOLAP project page</a> </p>
+  <p> Screencast for how to use the SOLAP query builder tool is available on <a href="https://youtu.be/Pc3RBPPgBhA" target="_blank">youtube</a> </p>
 </section>
